🤖 Apply quick-fixes by Qodana